[gd_scene load_steps=27 format=3 uid="uid://bk1ic2jri883i"]

[ext_resource type="Texture2D" uid="uid://dvbcq48ohdrex" path="res://Assets/UI/UI books & more.png" id="1_2vo66"]
[ext_resource type="Script" uid="uid://iwqfrvwvxx51" path="res://Scripts/UI/gui_overlay.gd" id="1_vqv5w"]
[ext_resource type="Texture2D" uid="uid://bmdawhrjubk8y" path="res://Assets/Entities/chomp_idle.png" id="3_31o6n"]
[ext_resource type="Theme" uid="uid://csdiw7pvt6axe" path="res://Themes/grimoire_theme.tres" id="3_lbv3i"]
[ext_resource type="Theme" uid="uid://e24781o5joi4" path="res://Themes/dialogue_theme.tres" id="4_d5ngb"]
[ext_resource type="Texture2D" uid="uid://d0tbe64g80a2m" path="res://Assets/UI/inventory-slot.png" id="5_4ewqb"]
[ext_resource type="Theme" uid="uid://e6bvrbsl0oqo" path="res://Themes/nameplate_theme.tres" id="5_lbv3i"]
[ext_resource type="Texture2D" uid="uid://db6utsfxwwvul" path="res://Assets/Character/Sprout Lands - Sprites - Basic pack/Characters/Basic Charakter Spritesheet.png" id="5_oo5r5"]
[ext_resource type="PackedScene" uid="uid://dsegb2otwpffd" path="res://Scenes/UI/settings.tscn" id="9_gdvwd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_bvooe"]
atlas = ExtResource("1_2vo66")
region = Rect2(16, 33, 96, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lfko8"]
atlas = ExtResource("1_2vo66")
region = Rect2(330, 272, 22, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_fxpvh"]
atlas = ExtResource("1_2vo66")
region = Rect2(330, 272, 22, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_ej8gj"]
atlas = ExtResource("1_2vo66")
region = Rect2(330, 272, 22, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lbv3i"]
atlas = ExtResource("1_2vo66")
region = Rect2(206, 272, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_wrmvy"]
atlas = ExtResource("1_2vo66")
region = Rect2(513, 17, 47, 62)

[sub_resource type="AtlasTexture" id="AtlasTexture_tjw04"]
atlas = ExtResource("1_2vo66")
region = Rect2(320, 379, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_mmlsp"]
atlas = ExtResource("1_2vo66")
region = Rect2(611, 83, 42, 58)

[sub_resource type="AtlasTexture" id="AtlasTexture_i7rqk"]
atlas = ExtResource("1_2vo66")
region = Rect2(192, 378, 16, 22)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ewqb"]
atlas = ExtResource("5_oo5r5")
region = Rect2(64, 16, 16, 17)

[sub_resource type="AtlasTexture" id="AtlasTexture_gdvwd"]
atlas = ExtResource("3_31o6n")
region = Rect2(37, 40, 22, 24)

[sub_resource type="AtlasTexture" id="AtlasTexture_vqv5w"]
atlas = ExtResource("1_2vo66")
region = Rect2(512, 177, 17, 15)

[sub_resource type="AtlasTexture" id="AtlasTexture_2vo66"]
atlas = ExtResource("1_2vo66")
region = Rect2(512, 208, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_s5xb7"]
atlas = ExtResource("1_2vo66")
region = Rect2(512, 192, 17, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_cto3x"]
atlas = ExtResource("1_2vo66")
region = Rect2(690, 225, 12, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_sb2yq"]
atlas = ExtResource("1_2vo66")
region = Rect2(690, 257, 12, 14)

[sub_resource type="AtlasTexture" id="AtlasTexture_cpp2p"]
atlas = ExtResource("1_2vo66")
region = Rect2(690, 241, 12, 14)

[node name="GUI Overview" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_vqv5w")

[node name="grimoire_base" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_left = -93.0
offset_top = -40.0
offset_right = 1058.0
offset_bottom = 611.0
scale = Vector2(1.15, 1.15)
color = Color(0, 0, 0, 0.447059)

[node name="grimoire_initial_image" type="TextureRect" parent="grimoire_base"]
layout_mode = 0
offset_left = 108.0
offset_top = 69.0
offset_right = 1049.0
offset_bottom = 565.0
texture = SubResource("AtlasTexture_bvooe")

[node name="catalogue_button" type="TextureButton" parent="grimoire_base"]
layout_mode = 0
offset_left = 971.0
offset_top = 128.0
offset_right = 994.0
offset_bottom = 144.0
scale = Vector2(3, 3)
theme = ExtResource("3_lbv3i")
texture_normal = SubResource("AtlasTexture_lfko8")
texture_pressed = SubResource("AtlasTexture_fxpvh")
texture_hover = SubResource("AtlasTexture_ej8gj")

[node name="recipes_button" type="TextureButton" parent="grimoire_base"]
layout_mode = 0
offset_left = 990.0
offset_top = 187.0
offset_right = 1009.0
offset_bottom = 203.0
scale = Vector2(3, 3)
theme = ExtResource("3_lbv3i")
texture_normal = SubResource("AtlasTexture_lbv3i")
texture_pressed = SubResource("AtlasTexture_lbv3i")
texture_hover = SubResource("AtlasTexture_lbv3i")

[node name="catalogue" type="TextureRect" parent="grimoire_base"]
visible = false
layout_mode = 0
offset_left = 95.0
offset_top = 18.0
offset_right = 444.0
offset_bottom = 411.0
texture = SubResource("AtlasTexture_wrmvy")
expand_mode = 1
flip_h = true

[node name="catalogue_green_ribbon" type="TextureRect" parent="grimoire_base/catalogue"]
layout_mode = 0
offset_left = 38.0
offset_top = -1.0
offset_right = 78.0
offset_bottom = 39.0
texture = SubResource("AtlasTexture_tjw04")

[node name="catalogue_pg2" type="TextureRect" parent="grimoire_base/catalogue"]
layout_mode = 0
offset_left = 440.0
offset_top = 6.0
offset_right = 789.0
offset_bottom = 399.0
texture = SubResource("AtlasTexture_wrmvy")
expand_mode = 1

[node name="recipes" type="TextureRect" parent="grimoire_base"]
visible = false
layout_mode = 0
offset_left = 73.0
offset_top = 22.0
offset_right = 438.0
offset_bottom = 437.0
texture = SubResource("AtlasTexture_mmlsp")

[node name="map_pg2" type="TextureRect" parent="grimoire_base/recipes"]
layout_mode = 0
offset_left = 447.0
offset_right = 812.0
offset_bottom = 415.0
texture = SubResource("AtlasTexture_mmlsp")
flip_h = true

[node name="TextureRect" type="TextureRect" parent="grimoire_base/recipes"]
layout_mode = 0
offset_left = 28.0
offset_top = -1.0
offset_right = 68.0
offset_bottom = 68.0
texture = SubResource("AtlasTexture_i7rqk")
expand_mode = 1

[node name="Table of Contents" type="Label" parent="grimoire_base"]
layout_mode = 0
offset_left = 227.0
offset_top = 118.0
offset_right = 469.0
offset_bottom = 140.0
theme = ExtResource("3_lbv3i")
theme_override_font_sizes/font_size = 24
text = "Table of Contents"

[node name="VBoxContainer" type="VBoxContainer" parent="grimoire_base/Table of Contents"]
layout_mode = 0
offset_left = 19.0
offset_top = 33.0
offset_right = 218.0
offset_bottom = 85.0
theme = ExtResource("3_lbv3i")

[node name="Catalogue" type="Button" parent="grimoire_base/Table of Contents/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lbv3i")
theme_override_colors/font_outline_color = Color(0.992157, 0.819608, 0.47451, 1)
theme_override_colors/font_color = Color(0.509804, 0.580392, 0.278431, 1)
text = "Catalogue .................. 3"
flat = true

[node name="Recipes" type="Button" parent="grimoire_base/Table of Contents/VBoxContainer"]
layout_mode = 2
theme = ExtResource("3_lbv3i")
theme_override_colors/font_outline_color = Color(0.992157, 0.819608, 0.47451, 1)
theme_override_colors/font_color = Color(0.709804, 0.34902, 0.266667, 1)
text = "Recipes ........................ 5"
flat = true

[node name="dialogue_base" type="ColorRect" parent="."]
visible = false
layout_mode = 0
offset_right = 1152.0
offset_bottom = 648.0
color = Color(0, 0, 0, 0.34902)

[node name="player_base" type="Panel" parent="dialogue_base"]
layout_mode = 0
offset_left = 25.0
offset_top = 363.0
offset_right = 225.0
offset_bottom = 613.0

[node name="player_portrait_background" type="TextureRect" parent="dialogue_base/player_base"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("5_4ewqb")

[node name="player_portrait" type="TextureRect" parent="dialogue_base/player_base/player_portrait_background"]
layout_mode = 0
offset_left = 22.0
offset_top = 19.0
offset_right = 172.0
offset_bottom = 169.0
texture = SubResource("AtlasTexture_4ewqb")

[node name="nameplate" type="TextureRect" parent="dialogue_base/player_base"]
layout_mode = 0
offset_top = 210.0
offset_right = 200.0
offset_bottom = 250.0
texture = ExtResource("5_4ewqb")

[node name="player_name" type="Label" parent="dialogue_base/player_base/nameplate"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 187.0
offset_bottom = 37.0
theme = ExtResource("5_lbv3i")
text = "player"
horizontal_alignment = 1
vertical_alignment = 1

[node name="npc_base" type="Panel" parent="dialogue_base"]
layout_mode = 0
offset_left = 929.0
offset_top = 373.0
offset_right = 1129.0
offset_bottom = 623.0

[node name="npc_portrait_background" type="TextureRect" parent="dialogue_base/npc_base"]
layout_mode = 0
offset_right = 200.0
offset_bottom = 200.0
texture = ExtResource("5_4ewqb")

[node name="CenterContainer" type="CenterContainer" parent="dialogue_base/npc_base/npc_portrait_background"]
layout_mode = 0
offset_right = 50.0
offset_bottom = 63.0
scale = Vector2(4, 4)

[node name="npc_portrait" type="TextureRect" parent="dialogue_base/npc_base/npc_portrait_background/CenterContainer"]
layout_mode = 2
texture = SubResource("AtlasTexture_gdvwd")
stretch_mode = 1

[node name="nameplate" type="TextureRect" parent="dialogue_base/npc_base"]
layout_mode = 0
offset_top = 210.0
offset_right = 200.0
offset_bottom = 250.0
texture = ExtResource("5_4ewqb")

[node name="npc_name" type="Label" parent="dialogue_base/npc_base/nameplate"]
layout_mode = 0
offset_left = 12.0
offset_top = 2.0
offset_right = 188.0
offset_bottom = 37.0
theme = ExtResource("5_lbv3i")
theme_override_font_sizes/font_size = 25
text = "comb bomb"
horizontal_alignment = 1
vertical_alignment = 1

[node name="dialogue_base" type="Panel" parent="dialogue_base"]
layout_mode = 0
offset_left = 240.0
offset_top = 425.0
offset_right = 915.0
offset_bottom = 600.0

[node name="dialogue_background" type="ColorRect" parent="dialogue_base/dialogue_base"]
layout_mode = 0
offset_right = 675.0
offset_bottom = 175.0

[node name="npc_dialogue" type="Label" parent="dialogue_base/dialogue_base/dialogue_background"]
visible = false
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 650.0
offset_bottom = 150.0
theme = ExtResource("4_d5ngb")
text = "I, the npc, am talking!"

[node name="player_responses" type="VBoxContainer" parent="dialogue_base/dialogue_base/dialogue_background"]
layout_mode = 0
offset_left = 25.0
offset_top = 25.0
offset_right = 650.0
offset_bottom = 150.0
theme = ExtResource("4_d5ngb")

[node name="option_a" type="Button" parent="dialogue_base/dialogue_base/dialogue_background/player_responses"]
layout_mode = 2
theme = ExtResource("4_d5ngb")
text = "dialogue option a"
alignment = 0
autowrap_mode = 2
clip_text = true

[node name="option_b" type="Button" parent="dialogue_base/dialogue_base/dialogue_background/player_responses"]
layout_mode = 2
theme = ExtResource("4_d5ngb")
text = "dialogue option b"
alignment = 0
autowrap_mode = 2
clip_text = true

[node name="option_c" type="Button" parent="dialogue_base/dialogue_base/dialogue_background/player_responses"]
layout_mode = 2
theme = ExtResource("4_d5ngb")
text = "dialogue option c"
alignment = 0
autowrap_mode = 2
clip_text = true

[node name="option_d" type="Button" parent="dialogue_base/dialogue_base/dialogue_background/player_responses"]
layout_mode = 2
theme = ExtResource("4_d5ngb")
text = "dialogue option d"
alignment = 0
autowrap_mode = 2
clip_text = true

[node name="grimoire_button_background" type="ColorRect" parent="."]
layout_mode = 0
offset_left = 1098.0
offset_top = 595.0
offset_right = 1145.0
offset_bottom = 642.0
color = Color(0, 0, 0, 0.454902)

[node name="grimoire_button" type="TextureButton" parent="grimoire_button_background"]
layout_mode = 0
offset_left = 1.0
offset_top = 1.0
offset_right = 48.0
offset_bottom = 46.0
texture_normal = SubResource("AtlasTexture_vqv5w")
texture_pressed = SubResource("AtlasTexture_2vo66")
texture_hover = SubResource("AtlasTexture_s5xb7")
stretch_mode = 0

[node name="Settings Button" type="TextureButton" parent="."]
layout_mode = 0
offset_left = 1047.0
offset_top = 597.0
offset_right = 1087.0
offset_bottom = 637.0
texture_normal = SubResource("AtlasTexture_cto3x")
texture_pressed = SubResource("AtlasTexture_sb2yq")
texture_hover = SubResource("AtlasTexture_cpp2p")
stretch_mode = 0

[node name="Settings" parent="." instance=ExtResource("9_gdvwd")]
visible = false
layout_mode = 1

[connection signal="pressed" from="grimoire_base/catalogue_button" to="." method="open_catalogue"]
[connection signal="pressed" from="grimoire_base/recipes_button" to="." method="open_recipes"]
[connection signal="pressed" from="grimoire_base/Table of Contents/VBoxContainer/Catalogue" to="." method="open_catalogue"]
[connection signal="pressed" from="grimoire_base/Table of Contents/VBoxContainer/Recipes" to="." method="open_recipes"]
[connection signal="pressed" from="dialogue_base/dialogue_base/dialogue_background/player_responses/option_a" to="." method="_on_option_a_pressed"]
[connection signal="pressed" from="dialogue_base/dialogue_base/dialogue_background/player_responses/option_b" to="." method="_on_option_b_pressed"]
[connection signal="pressed" from="dialogue_base/dialogue_base/dialogue_background/player_responses/option_c" to="." method="_on_option_c_pressed"]
[connection signal="pressed" from="dialogue_base/dialogue_base/dialogue_background/player_responses/option_d" to="." method="_on_option_d_pressed"]
[connection signal="pressed" from="grimoire_button_background/grimoire_button" to="." method="_on_button_pressed"]
